-XX:ArchiveClassesAtExit should print warning if base archive failed to load

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • b08

      Before JDK-8261455:

      $ java -XX:+UseCompressedOops -XX:SharedArchiveFile=foo.jsa -Xshare:dump
      $ java -XX:-UseCompressedOops -XX:SharedArchiveFile=foo.jsa -XX:ArchiveClassesAtExit=bar.jsa -version
      Error occurred during initialization of VM
      -XX:ArchiveClassesAtExit is unsupported when base CDS archive is not loaded. Run with -Xlog:cds for more info.

      After JDK-8261455:
      $ java -XX:+UseCompressedOops -XX:SharedArchiveFile=foo.jsa -Xshare:dump
      $ java -XX:-UseCompressedOops -XX:SharedArchiveFile=foo.jsa -XX:ArchiveClassesAtExit=bar.jsa -version
      java version "19-internal" 2022-09-20
      Java(TM) SE Runtime Environment (build 19-internal+0-adhoc.iklam.open)
      Java HotSpot(TM) 64-Bit Server VM (build 19-internal+0-adhoc.iklam.open, mixed mode)
      $ ls -l bar.jsa
      ls: cannot access 'bar.jsa': No such file or directory


            Assignee:
            Yumin Qi
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: