8280353: -XX:ArchiveClassesAtExit should print warning if base archive failed to load

Reviewed-by: iklam, ccheung